Intermittent fission failure: TEST-UNEXPECTED-ERROR | dom/security/test/csp/test_service_worker.html | called finish() multiple times
Categories
(Core :: Privacy: Anti-Tracking, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox-esr68 | --- | unaffected |
firefox68 | --- | unaffected |
firefox69 | --- | unaffected |
firefox70 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: ehsan.akhgari)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: intermittent-failure, regression, Whiteboard: [stockwell disable-recommended])
Attachments
(1 file)
Filed by: dvarga [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=263276020&repo=mozilla-central
Full log: https://queue.taskcluster.net/v1/task/QwFK0X_fRzKgHeX2VQEFng/runs/0/artifacts/public/logs/live_backing.log
Failure logs:
-
opt-mochitest-fis-e10s-4
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=263263213&repo=mozilla-central&lineNumber=2812 -
opt-mochitest-fis-e10s-5
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=263263109&repo=mozilla-central&lineNumber=3631 -
browser-chrome-fis-e10s-3
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=263263047&repo=mozilla-central&lineNumber=3778
4.devtools-chrome-fis-e10s
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=263268956&repo=mozilla-central&lineNumber=7885
-
opt-mochitest-browser-chrome-fis-e10s-4
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=263282116&repo=mozilla-central&lineNumber=6437 -
opt-mochitest-browser-chrome-fis-e10s-6
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=263267323&repo=mozilla-central&lineNumber=6715
At first glance, it appears that a lot of these don't even call window.open(). I suspect this might have something to do with newly-unskipped Fission tests not cleaning up properly. Probably will just need to update skip-if/fail-if annotations.
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 5•6 years ago
|
||
I did some retriggers and the fail seems to have started from Bug 1575609
Retriggs: https://treeherder.mozilla.org/#/jobs?repo=autoland&resultStatus=pending%2Crunning%2Csuccess%2Ctestfailed%2Cbusted%2Cexception&searchStr=linux%2Cx64%2Copt%2Cmochitests%2Cwith%2Cfission%2Cenabled%2Ctest-linux64%2Fopt-mochitest-plain-headless-fis-e10s-3%2Cm-fis%28h3%29&tochange=a37d72905bf66ebacc4ef0bb0d2a46f86b7804f5&fromchange=6ad70843c2b3aa1d9f68d411e0d888e673e92924
:ehsan , can you please take a look?
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 7•6 years ago
|
||
Just to set proper expectations: I will not be looking at all of the failures listed in comment 0 because it is unclear whether they're all related to bug 1575609. Even for the other failure in the h3 test suite, bug 1573633 is on file. I'm changing the bug summary to clarify the work that will be done here.
Please make sure one bug per failure is on file for each one of the other ones in comment 0 and appropriate folks are needinfo'ed on each one. Thanks!
Just for completeness, here are the bugs corresponding to the failures in comment 0:
- Bug 1576464
- Bug 1576461
- Bug 1576456
- Bug 1542509 (I guess we'll need a separate perma-Fission bug?)
- Same failure as 3.
- Bug 1576421
Assignee | ||
Comment 9•6 years ago
|
||
The function called in these tests of course does the wrong thing, but these
tests aren't testing anything related to anti-tracking, so it is probably
harmless to leave this code in until the dependencies described in the comments
in the patch are in place.
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Comment 15•6 years ago
|
||
(In reply to :kashav from comment #8)
Just for completeness, here are the bugs corresponding to the failures in comment 0:
Both dupes of this.
Unrelated to this.
- Bug 1542509 (I guess we'll need a separate perma-Fission bug?)
Unrelated to this (and yes, probably).
- Same failure as 3.
- Bug 1576421
I think #6 is also a dupe of this one since the test is green on my local tree.
Assignee | ||
Updated•6 years ago
|
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 21•6 years ago
|
||
Comment 22•6 years ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
Updated•6 years ago
|
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 26•5 years ago
|
||
Failures within this range https://treeherder.mozilla.org/intermittent-failures.html#/bugdetails?startday=2019-08-29&endday=2019-09-05&tree=trunk&bug=1576316 are misclassifications.
Comment hidden (Intermittent Failures Robot) |
Comment 28•5 years ago
|
||
Retroactively moving fixed bugs whose summaries mention "Fission" (or other Fission-related keywords) but are not assigned to a Fission Milestone to an appropriate Fission Milestone.
This will generate a lot of bugmail, so you can filter your bugmail for the following UUID and delete them en masse:
0ee3c76a-bc79-4eb2-8d12-05dc0b68e732
Updated•3 years ago
|
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Description
•