Bug 1576316 - Restore a bit of the Fission-incompatible code removed in bug 1575609 in order to satisfy the tests that are relying on it; r=baku

The function called in these tests of course does the wrong thing, but these
tests aren't testing anything related to anti-tracking, so it is probably
harmless to leave this code in until the dependencies described in the comments
in the patch are in place.

Differential Revision: https://phabricator.services.mozilla.com/D43465